# flow

./: CMakeLists.txt
expressions/: CMakeLists.txt  addition_expression.cpp  addition_expression.hpp  arithmetic_expression.hpp  binary_expression.cpp  binary_expression.hpp  constant_expression.cpp  constant_expression.hpp  equal_expression.cpp  equal_expression.hpp  expression.cpp  expression.hpp  filter_expression.cpp  filter_expression.hpp  greaterthan_expression.cpp  greaterthan_expression.hpp  lessthan_expression.cpp  lessthan_expression.hpp  multiplication_expression.cpp  multiplication_expression.hpp  nullary_expression.cpp  nullary_expression.hpp  operator.cpp  operator.hpp  parameter_expression.cpp  parameter_expression.hpp  result.hpp  scope.cpp  scope.hpp  subtraction_expression.cpp  subtraction_expression.hpp  unary_expression.cpp  unary_expression.hpp  value.cpp  value.hpp  variable_expression.cpp  variable_expression.hpp
expressions/tests/: expression_test.cpp
graph/: CMakeLists.txt  aggregate_node.cpp  aggregate_node.hpp  binary_node.cpp  binary_node.hpp  filter_node.cpp  filter_node.hpp  from_node.cpp  from_node.hpp  node.cpp  node.hpp  nullary_node.cpp  nullary_node.hpp  operator.hpp  print_node.cpp  print_node.hpp  query_scope.cpp  query_scope.hpp  source_node.cpp  source_node.hpp  table_node.cpp  table_node.hpp  unary_node.cpp  unary_node.hpp  value.hpp
graph/tests/: interpreter_test.cpp  nodes_test.cpp
